// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`convert drill > definition > should convert drill to dashboard with drill from attribute 1`] = `
{
  "localIdentifier": "mockeduuid",
  "origin": {
    "attribute": {
      "localIdentifier": "attributeLocalIdentifier",
    },
    "type": "drillFromAttribute",
  },
  "target": {
    "identifier": "dashboardId",
  },
  "transition": "in-place",
  "type": "drillToDashboard",
}
`;

exports[`convert drill > definition > should convert drill to dashboard with drill from measure 1`] = `
{
  "localIdentifier": "mockeduuid",
  "origin": {
    "measure": {
      "localIdentifier": "measureLocalIdentifier",
    },
    "type": "drillFromMeasure",
  },
  "target": {
    "identifier": "dashboardId",
  },
  "transition": "in-place",
  "type": "drillToDashboard",
}
`;

exports[`convert drill > origin > should convert drill from attribute 1`] = `
{
  "attribute": {
    "localIdentifier": "attributeLocalIdentifier",
  },
  "type": "drillFromAttribute",
}
`;

exports[`convert drill > origin > should convert drill from measure 1`] = `
{
  "measure": {
    "localIdentifier": "measureLocalIdentifier",
  },
  "type": "drillFromMeasure",
}
`;
